# OpenCV-FetchContent-Template

./: CMakeLists.txt  README.md  main.cpp
